<resources>
    <string name="app_name">Volley Eaxmple</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="dummy_time_stamp">10 minutes ago</string>
    <string name="this_is_a_dummy_status">This is a dummy status.</string>
    <string name="settings">Settings</string>
    <string name="about_app">About Us</string>
    <string name="news_feed">News Feed</string>
    <string name="friend_list">Friends</string>
    <string name="dummy_mutual_friends">10 Mutual Friends</string>
</resources>
