<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_feed"
            android:icon="@drawable/ic_news_feed_black_24dp"
            android:title="@string/news_feed" />
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/friend_list" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about_app"
                android:title="@string/about_app" />
        </menu>
    </item>

</menu>
