<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/status_holder_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/profile_picture_image_view"
                    android:layout_width="55dip"
                    android:layout_height="55dip"
                    android:src="@drawable/default_profile_pic"
                    app:riv_oval="true" />


                <TextView
                    android:id="@+id/full_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:layout_toEndOf="@+id/profile_picture_image_view"
                    android:layout_toRightOf="@+id/profile_picture_image_view"
                    android:clickable="true"
                    android:text="@string/full_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timestamp_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/full_name_text_view"
                    android:layout_alignStart="@+id/full_name_text_view"
                    android:layout_below="@+id/full_name_text_view"
                    android:layout_marginTop="2dip"
                    android:text="@string/dummy_time_stamp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_picture_image_view"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="10dp"
                    android:text="@string/this_is_a_dummy_status"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_below="@+id/status_text_view"
                    android:layout_margin="5dip"
                    android:background="@android:color/darker_gray" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status_holder_layout"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0.5dip"
                    android:layout_marginRight="0.5dip"
                    android:layout_weight="1"
                    android:background="@drawable/status_button"
                    android:drawableLeft="@drawable/ic_thumb_up_black_24dp"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/ic_thumb_up_black_24dp"
                    android:text="like"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0.5dip"
                    android:layout_marginLeft="0.5dip"
                    android:layout_marginRight="0.5dip"
                    android:layout_marginStart="0.5dip"
                    android:layout_weight="1"
                    android:background="@drawable/status_button"
                    android:drawableLeft="@drawable/ic_comment_black_24dp"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/ic_comment_black_24dp"
                    android:text="comment"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dip"
                    android:layout_marginStart="0.5dip"
                    android:layout_weight="1"
                    android:background="@drawable/status_button"
                    android:drawableLeft="@drawable/ic_share_black_24dp"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/ic_share_black_24dp"
                    android:text="share"
                    android:textSize="12sp" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>